--- a/web/main/templates/main/modals.html
+++ b/web/main/templates/main/modals.html
@@ -141,7 +141,7 @@
           <thead class="thead-light">
             <tr>
               <th scope="col">Categoría</th>
-              <th scope="col">Puntaje</th>
+              <th scope="col">Cumplió</th>
             </tr>
           </thead>
           <tbody>
@@ -152,9 +152,6 @@
                </td>
                <td id="onTime">
                   {{evaluationForm.onTime}}
-               </td>
-                 <td>
-                 {{appraisal.appraisalevaluation.onTime}}
                </td>
               </tr>
               <tr>
@@ -191,10 +188,10 @@
               </tr>
               <tr>
                 <td>
-                   {{evaluationForm.homologatedReference.label}}
+                   {{evaluationForm.homologatedReferences.label}}
                 </td>
-                <td id="homologatedReference">
-                  {{evaluationForm.homologatedReference}}
+                <td id="homologatedReferences">
+                  {{evaluationForm.homologatedReferences}}
                 </td>
               </tr>
               <tr>
@@ -227,6 +224,3 @@
   </div>
 </div>
 
-<script>
-
-</script>
