--- a/web/main/templates/main/modals.html
+++ b/web/main/templates/main/modals.html
@@ -203,6 +203,19 @@
   </div>
 </div>
 
-<script>
 
-</script>
+
+<div class="modal fade" id="logbook" tabindex="-2" role="dialog" aria-labelledby="label" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Bitácora</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" id="historial">
+      </div>
+    </div>
+  </div>
+</div>
