--- a/web/main/static/main/css/base.css
+++ b/web/main/static/main/css/base.css
@@ -58,3 +58,26 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
+
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #333333; /* Blue */
+    border-radius: 90%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.border-3 {
+    border-width:3px !important;
+}
+
+.btn-not {
+  background-color: #007bff;
+  color: #fff;
+}
