--- a/web/main/templates/main/modals.html
+++ b/web/main/templates/main/modals.html
@@ -234,7 +234,48 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body" id="historial">
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-12">
+
+            <form id="form_comment" data-comment-url="{% url 'ajax_comment_url' %}">
+              {% csrf_token %}
+              <input id="in_appraisal_id" name="appraisal_id" type="hidden" value=-1>
+              <div class="form-group">
+                {{ form_comment.event.label_tag}}
+                {{ form_comment.event }}
+              </div>
+              <div class="form-group">
+                {{ form_comment.text.label_tag }}
+                {{ form_comment.text }}
+              </div>
+              <div class="form-group row">
+                <div class="col-12">
+                  <button class="btn btn-dark btn-block" name="btn_comment" id="comment">Comentar</button>
+                </div>
+              </div>
+            </form>
+
+            <hr/>
+
+            <div id="loading" class="mb-3 col-lg-12" style="display:none;">
+              <div class="row">
+                <div class="col-5"></div>
+                <div class="col-2">
+                  <div class="col loader"></div>
+                </div>
+                <div class="col-5"></div>
+              </div>
+            </div>
+
+            <div id="historial">
+
+              <!-- This is filled via AJAX, see logbook.html -->
+
+            </div>
+
+          </div>
+        </div>
       </div>
     </div>
   </div>
